erDiagram

    SPENDEN ||--|| DONOR : has

    DONOR {
        string donor_type
        bool receipt
        bool mailing_list
        string email_address
    }

    COMPANY_DONOR {
        string company_name
    }

    SCRUBBED_DONOR {
        string original_donor_type
        string original_salutation
    }

    DONOR_NAME {
        string firstname
        string lastname
        string salutation
        string title
    }

    DONOR |o--|| COMPANY_DONOR : inherits_from
    DONOR |o--|| SCRUBBED_DONOR : inherits_from

    DONOR |o--|| DONOR_ADDRESS : has
    DONOR |o--|| DONOR_NAME : has

    DONOR_ADDRESS {
        string street_name
        string house_number
        string postcode
        string city
        string country_code
    }